@@ -68,7 +68,7 @@ build tools installed.  Currently, these include:
 Some modules may be managed with Subversion of Gnu Arch, so you will
 need those tools to build affected modules:
   subversion  http://subversion.tigris.org/
-  tla         http://ftp.gnu.org/gnu/gnu-arch/
+  bazaar      http://bazaar.canonical.com/ (an Arch implementation)
 
 You can check whether the tools are available by running the following
 command:
