@@ -29,5 +29,5 @@ module_autogenargs['gnome-vfs'] = autogenargs + ' --enable-hal'
 module_autogenargs['gimp'] = autogenargs + ' --disable-print --enable-python'
 module_autogenargs['planner'] = autogenargs + ' --enable-database'
 
-module_autogenargs['howl'] = autogenargs.replace('--disable-static', '')
+#module_autogenargs['howl'] = autogenargs.replace('--disable-static', '')
 module_autogenargs['totem'] = autogenargs + ' --disable-gstreamer'
