@@ -1,3 +1,10 @@
+2005-02-28  James Henstridge  <james@jamesh.id.au>
+
+	* README: point people at Bazaar instead of TLA.
+
+	* jhbuild/utils/arch.py: use Bazaar instead of TLA when working
+	with Arch archives.
+
 2005-02-28  Federico Mena Quintero  <federico@ximian.com>
 
 	* modulesets/gnome-2.10.modules: ORBit2 branch is gnome-2-10.
